src/objects/Artist__c.object
<CustomObject>
    <fields>
        <fullName>followers__c</fullName>
        <label>followers</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>genres__c</fullName>
        <label>genres</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>images__c</fullName>
        <label>images</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>name__c</fullName>
        <label>name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>type__c</fullName>
        <label>type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Artist</label>
    <nameField>
        <label>Artist Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Artists</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>